# 2023-autumn-ab-python-hw-14-team-dev-eartqk

./: .env.example  .pylintrc  Makefile  README.md  REPORT.md  alembic.ini  docker-compose.yaml  pyproject.toml  template.env
.github/workflows/: app.yml
docker/src/: Dockerfile
src/social_network/: app.py  settings.py
src/social_network/api/: auth.py  comments.py  countries.py  organizations.py  posts.py  subscriptions.py  users.py
src/social_network/db/: base.py  session.py  tables.py
src/social_network/db/migrations/: env.py
src/social_network/db/migrations/versions/: f0e469f00eff_initial.py
src/social_network/schemas/: auth.py  comments.py  countries.py  organizations.py  posts.py  users.py
src/social_network/services/: auth.py  comments.py  countries.py  organizations.py  posts.py  subscriptions.py  users.py
src/social_network/services/minio/: policies.py  uploads.py
tests/: conftest.py  test_main.py
tests/integration/: test_auth.py  test_comments.py  test_countries.py  test_organizations.py  test_posts.py  test_subscriptions.py  test_users.py
